@@ -54,6 +54,7 @@ function makeLevelEnemy(level, type, health_cut_ratio)
         { type = "cold", percent = 95 }
     }
     biter['healing_per_tick'] = 0
+    ERM_UnitHelper.modify_biter_damage(biter, type, level)
 
     return biter
 end
