@@ -113,6 +113,7 @@ function makeLevelWorm(level, type, health_cut_ratio)
         { type = "cold", percent = ERM_UnitHelper.get_resistance(base_cold_resistance, incremental_cold_resistance, resistance_mutiplier, level) }
     }
     worm['healing_per_tick'] = ERM_UnitHelper.get_building_healing(original_hitpoint, max_hitpoint_multiplier, health_multiplier, level)
+    ERM_UnitHelper.modify_worm_damage(worm, level)
 
     return worm
 end
